# pingprocessing

./: .gitignore  README.md  meson.build  requirements.txt
.github/workflows/: ci-linux.yml  ci-mac.yml  ci-windows.yml  ci.yml
python/: meson.build
python/tests/: test_pingprocessing_imports.py  test_tutorial.py
python/tests/core/: test_helper.py  test_progress.py
python/tests/overview/: test_navplot.py
python/tests/watercolumn/echograms/: test_axis_origins.py  test_backends.py  test_calibration.py  test_combine_from_image.py  test_concat_combine_params.py  test_echodata.py  test_gridded_mmap_roundtrip.py  test_layers.py  test_x_axes.py
python/tests/watercolumn/image/: test_imagebuilder_cache.py
python/tests/watercolumn/make_image/: test_make_wci.py
python/tests/widgets/: test_wciviewer.py
python/themachinethatgoesping/: __init__.py
python/themachinethatgoesping/pingprocessing/: __init__.py
python/themachinethatgoesping/pingprocessing/core/: __init__.py  asserts.py  helper.py  progress.py
python/themachinethatgoesping/pingprocessing/filter_pings/: __init__.py  by_features.py  by_files.py  by_region.py  by_time.py  by_time_list.py  by_time_ranges.py
python/themachinethatgoesping/pingprocessing/group_pings/: __init__.py  dual_head.py
python/themachinethatgoesping/pingprocessing/overview/: __init__.py  cluster.py  nav_plot.py  overlap_filter.py  pingoverview.py  pingproxy.py
python/themachinethatgoesping/pingprocessing/overview/map_builder/: __init__.py  coordinate_system.py  map_builder.py  tile_builder.py  tile_builder.py.bak
python/themachinethatgoesping/pingprocessing/overview/map_builder/backends/: __init__.py  base.py  geotiff_backend.py
python/themachinethatgoesping/pingprocessing/split_pings/: __init__.py  by_course.py  by_distance.py  by_file.py  by_function_return.py  by_heading.py  by_region.py  by_time.py  by_time_blocks.py  by_turn.py  into_ping_blocks.py  into_time_blocks.py
python/themachinethatgoesping/pingprocessing/testing/: __init__.py  find_test_files.py
python/themachinethatgoesping/pingprocessing/watercolumn/: __init__.py
python/themachinethatgoesping/pingprocessing/watercolumn/echograms/: __init__.py  coordinate_system.py  echodata.py  echogrambuilder.py  echogrambuilder_new.py  echogrambuilder_refactored.py  echogramgroup.py  echogramsection.py  echolayer.py  echoproxy.py  indexers.py
python/themachinethatgoesping/pingprocessing/watercolumn/echograms/backends/: __init__.py  base.py  combine_backend.py  concat_backend.py  gridded_mmap_backend.py  image_backend.py  mmap_backend.py  ping_backend.py  storage_mode.py  zarr_backend.py
python/themachinethatgoesping/pingprocessing/watercolumn/echograms/calibration/: __init__.py  _pooling.py  builder.py  data.py  models.py  pattern.py  plotting.py
python/themachinethatgoesping/pingprocessing/watercolumn/echograms/echoimagebuilders/: __init__.py  echodata.py  timeimagebuilder.py
python/themachinethatgoesping/pingprocessing/watercolumn/echograms/layers/: __init__.py  echolayer.py  layer.py  layergenerator.py  layerprocessor.py  pingdata.py  processor.py  store.py  transfer.py
python/themachinethatgoesping/pingprocessing/watercolumn/helper/: __init__.py  make_image_helper.py  select_get_wci_image.py
python/themachinethatgoesping/pingprocessing/watercolumn/image/: __init__.py  imagebuilder.py  make_wci.py
python/themachinethatgoesping/pingprocessing/watercolumn/make_image/: __init__.py  make_wci.py
python/themachinethatgoesping/pingprocessing/watercolumn/wci/: __init__.py
python/themachinethatgoesping/pingprocessing/widgets/: __init__.py  combinedviewer_qt.py  control_jupyter.py  control_qt.py  control_spec.py  echogramviewer.py  echogramviewer_core.py  echogramviewer_jupyter.py  echogramviewer_pyqtgraph.py  echogramviewer_pyqtgraph2.py  echogramviewer_qt.py  echogramviewer_vispy.py  mapviewer_core.py  mapviewer_jupyter.py  mapviewer_pyqtgraph.py  mapviewer_qt.py  pyqtgraph_helpers.py  tqdmwidget.py  wciviewer.py  wciviewer_core.py  wciviewer_jupyter.py  wciviewer_pyqtgraph.py  wciviewer_pyqtgraph2.py  wciviewer_qt.py
python/themachinethatgoesping/split_pings/: by_channel_id.py  by_time.py
src/: meson.build
src/nanomodule/: meson.build  module.cpp
src/nanomodule/watercolumn/: module.cpp  module.hpp
src/nanomodule/watercolumn/image/: module.cpp  module.hpp
src/pch/: pingprocessing_pingprocessing_nanopy.hpp
src/pymodule/: m_navtools.cpp  meson.build  module.cpp
src/pymodule/watercolumn/: module.cpp  module.hpp
src/pymodule/watercolumn/image/: module.cpp  module.hpp
src/pymodule/watercolumn/wci/: module.cpp  module.hpp
src/tests/: meson.build  tutorial.test.cpp
src/themachinethatgoesping/: meson.build
src/themachinethatgoesping/pingprocessing/: helloping.hpp  meson.build
src/themachinethatgoesping/pingprocessing/.docstrings/: helloping.doc.hpp
src/themachinethatgoesping/pingprocessing/watercolumn/echograms/: echogrambase.hpp
src/themachinethatgoesping/pingprocessing/watercolumn/echograms/.docstrings/: echogrambase.doc.hpp  pingindexconverter.doc.hpp
src/themachinethatgoesping/pingprocessing/watercolumn/image/: make_wci.hpp
src/themachinethatgoesping/pingprocessing/watercolumn/image/.docstrings/: make_wci.doc.hpp
src/themachinethatgoesping/pingprocessing/watercolumn/make_image/functions/: lookup_beams_and_samples.hpp
src/themachinethatgoesping/pingprocessing/watercolumn/make_image/functions/.docstrings/: lookup_beams_and_samples.doc.hpp
src/themachinethatgoesping/pingprocessing/watercolumn/wci/: make_wci.hpp
src/themachinethatgoesping/pingprocessing/watercolumn/wci/.docstrings/: make_wci.doc.hpp
subprojects/: .gitignore  echosounders.wrap
